<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.audition.VendingMachine">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_green_dark"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/buttonProduct1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:onClick="onButtonClicked"
                            android:text="Coke\n\n$1.00" />

                        <Button
                            android:id="@+id/buttonProduct2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:onClick="onButtonClicked"
                            android:text="Chips\n\n$0.50" />

                        <Button
                            android:id="@+id/buttonProduct3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:onClick="onButtonClicked"
                            android:text="Candy\n\n$0.65" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/buttonProduct4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:onClick="onButtonClicked"
                            android:text="Gum\n\n$0.35" />

                        <Button
                            android:id="@+id/buttonProduct5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:backgroundTint="@android:color/darker_gray"
                            android:enabled="false"
                            android:onClick="onButtonClicked" />

                        <Button
                            android:id="@+id/buttonProduct6"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:backgroundTint="@android:color/darker_gray"
                            android:enabled="false"
                            android:onClick="onButtonClicked" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/buttonProduct7"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:backgroundTint="@android:color/darker_gray"
                            android:enabled="false"
                            android:onClick="onButtonClicked" />

                        <Button
                            android:id="@+id/buttonProduct8"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:backgroundTint="@android:color/darker_gray"
                            android:enabled="false"
                            android:onClick="onButtonClicked" />

                        <Button
                            android:id="@+id/buttonProduct9"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:backgroundTint="@android:color/darker_gray"
                            android:enabled="false"
                            android:onClick="onButtonClicked" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@android:color/holo_purple"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:background="#afafaf"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvLCD"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="INSERT COIN"
                            android:textColor="#000000" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/buttonReturnCoins"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="#9a3333"
                            android:onClick="onButtonClicked"
                            android:text="Coin Return"
                            android:textColor="@android:color/white" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAddCoin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClicked"
                android:text="Add Coin" />

            <Button
                android:id="@+id/buttonProductBay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClicked"
                android:text="Product Bay" />

            <Button
                android:id="@+id/buttonCoinReturnBay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClicked"
                android:text="Return Slot" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
